--- a/cropview/build.gradle
+++ b/cropview/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
-apply from: "${rootProject.projectDir}/publish.gradle"
+//apply from: "${rootProject.projectDir}/publish.gradle"
 
 android {
     namespace 'com.image.cropview'
@@ -44,7 +44,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.5.3"
+        kotlinCompilerExtensionVersion = "1.5.8"
     }
 }
 
